added lexical errors in lexer